--- a/InstaCloneParse/InstaCloneParse/Base.lproj/Main.storyboard
+++ b/InstaCloneParse/InstaCloneParse/Base.lproj/Main.storyboard
@@ -15,10 +15,69 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w4y-jA-KoZ">
+                                <rect key="frame" x="50" y="336" width="75" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="B8G-4u-WKe"/>
+                                    <constraint firstAttribute="width" constant="75" id="LQw-0N-yCe"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Sign In">
+                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="signInButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HfX-qN-mVt"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RFj-51-6Q4">
+                                <rect key="frame" x="289" y="336" width="75" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Sign Up">
+                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="signUpButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XFV-zX-ssF"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lNY-Ny-g1E">
+                                <rect key="frame" x="50" y="206" width="314" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rmF-VX-4uO">
+                                <rect key="frame" x="50" y="262" width="314" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Parse Instagram Clone" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ewq-0p-fpz">
+                                <rect key="frame" x="50" y="121" width="314" height="30"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="25"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.37401195910000001" green="0.1119470494" blue="0.1486052357" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="Ewq-0p-fpz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="2Kr-KT-EDD"/>
+                            <constraint firstItem="RFj-51-6Q4" firstAttribute="top" secondItem="w4y-jA-KoZ" secondAttribute="top" id="7jK-lF-D2n"/>
+                            <constraint firstItem="lNY-Ny-g1E" firstAttribute="top" secondItem="Ewq-0p-fpz" secondAttribute="bottom" constant="55" id="82a-tA-98o"/>
+                            <constraint firstItem="lNY-Ny-g1E" firstAttribute="leading" secondItem="Ewq-0p-fpz" secondAttribute="leading" id="Jju-v5-sST"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ewq-0p-fpz" secondAttribute="trailing" constant="50" id="RYC-PN-7i8"/>
+                            <constraint firstItem="rmF-VX-4uO" firstAttribute="trailing" secondItem="lNY-Ny-g1E" secondAttribute="trailing" id="TbF-pV-LVF"/>
+                            <constraint firstItem="rmF-VX-4uO" firstAttribute="leading" secondItem="lNY-Ny-g1E" secondAttribute="leading" id="VjX-Nu-sha"/>
+                            <constraint firstItem="w4y-jA-KoZ" firstAttribute="leading" secondItem="rmF-VX-4uO" secondAttribute="leading" id="duy-RM-QdL"/>
+                            <constraint firstItem="Ewq-0p-fpz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="77" id="eBx-ke-U27"/>
+                            <constraint firstItem="RFj-51-6Q4" firstAttribute="trailing" secondItem="rmF-VX-4uO" secondAttribute="trailing" id="ehl-Rd-Noe"/>
+                            <constraint firstItem="lNY-Ny-g1E" firstAttribute="trailing" secondItem="Ewq-0p-fpz" secondAttribute="trailing" id="kwC-TA-RLM"/>
+                            <constraint firstItem="w4y-jA-KoZ" firstAttribute="top" secondItem="rmF-VX-4uO" secondAttribute="bottom" constant="40" id="mXg-9t-ikh"/>
+                            <constraint firstItem="rmF-VX-4uO" firstAttribute="top" secondItem="lNY-Ny-g1E" secondAttribute="bottom" constant="22" id="mck-Kf-swn"/>
+                        </constraints>
                     </view>
                     <connections>
+                        <outlet property="passwordText" destination="rmF-VX-4uO" id="isu-Jk-eNF"/>
+                        <outlet property="usernameText" destination="lNY-Ny-g1E" id="jgk-CU-0jz"/>
                         <segue destination="NvD-k0-Rus" kind="presentation" identifier="toTabBar" modalPresentationStyle="fullScreen" id="CTo-0x-pvG"/>
                     </connections>
                 </viewController>
